# LowLightObjectDet

./: .env_example  .gitignore  .gitmodules  Makefile  README.md  config.py  custom_utils.py  datasets.py  env.yml  eval.py  inference.py  inference_video.py  labels_utils.py  lightning_demo.py  model.py  prepare_data.sh  pyproject.toml  train.py
configs/: config.yaml  eval.yaml  inference.yaml  train.yaml  visualizedata.yaml
configs/datamodule/: datamodule.yaml  gamma.yaml  gaussnoise.yaml  glare.yaml  hvicid.yaml
configs/experiment/: detr_exp.yaml  exp1.yaml  fcos_exp.yaml  retinanet_exp.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: def_detr.yaml  def_detr_2.yaml  detr.yaml  fasterrcnn.yaml  fcos.yaml  retinanet.yaml  wrapperdefdetr.yaml  wrapperfcos.yaml  wrapperretinanet.yaml  wrappertorchvision.yaml
configs/sweeps/: detrs.yaml  fine_tune_llie.yaml
configs/trainer/: trainer.yaml
data/: exdark_classes.py  labels_mappers.py  labels_storage.py  move_imgs_to_flat_dir.py  names_tolower.py  prepare_data.sh  readme.md  subsample.py  train_test_val.py
data/License Plate Recognition.v1-raw-images.voc/: README.dataset.txt
data2/: labels_mappers.py  labels_storage.py  labels_utils.py  parse_anno_files_classes.py  parse_imgclasslist_classes_idx.py  prepare.sh
doc/: baseline eval.md  first_experiments_results.md
exdark/: __init__.py  config.py  custom_utils.py  dataloading.py  datamodule.py  dataset.py  datasets.py  model.py
exdark/data/: config.py  datamodule.py  datasets.py
exdark/logging/: callbacks.py  loggers.py  updates.py
exdark/modeling/: eval.py  inference.py  train.py  utils.py  visualizedata.py
exdark/models/: baseexdarkmodel.py  callbacks.py  cocowraper.py  cocowrapperfasterrcnn.py  cocowrapperrtdetr.py  coremodels.py  deformabledetr.py  fasterrcnn.py  fcos.py  finetune.py  rawcocomodels.py  retinanet.py  rtdetr.py  v2_rtdetr.py
exdark/visulisation/: bbox.py
legacy/enlighten-gan-buggy/: enlight_dir.py  enlighten_gan.ipynb
scritps/: tiny_data_experiment.sh  tiny_data_frozen_fcos_retina_experiment.sh
scritps/shell/: eval_baselines.sh  eval_llie_on_baselines.sh  freeze_backbone_experiment.sh  train_backbone_on_off.sh  (+3 more)
tests/: test_dataset.py  test_detection_filter.py  test_loggers.py  test_models.py  test_subsample.py  test_visualizedata.py
(+29 files in other folders)
