[project]
name = "ExDarkObjectRegognition"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Wojciech Zarzecki", email = "wojtek.zarzecki2002@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "torchvision>=0.19.1",
    "opencv-python>=4.10.0.84",
    "albumentations>=1.4.15",
    "matplotlib>=3.9.2",
    "torchmetrics>=1.4.2",
    "torch>=2.4.1",
    "tqdm>=4.66.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
